objects/CCPA_Request__c.object
<CustomObject>
    <fields>
        <fullName>Marketing_Cloud_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_Delete_Timestamp__c</fullName>
        <label>Marketing Cloud Delete Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_Status_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud Status Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Cloud Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud_Delete_Timestamp__c</fullName>
        <label>Sales Cloud Delete Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud_Status_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Cloud Status Reported</label>
        <type>Checkbox</type>
    </fields>
    <label>CCPA Request</label>
    <nameField>
        <label>CCPA Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCPA Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>